load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "UserServiceClient.go",
        "UserServiceServer.go",
    ],
    importpath = "github.com/JohnnyS318/RoyalAfgInGo/mocks/pkg/protos",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/protos",
        "@com_github_stretchr_testify//mock:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
