load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "protos",
    srcs = [
        "UserServiceClient.go",
        "UserServiceServer.go",
    ],
    importpath = "github.com/JohnnyS318/RoyalAfgInGo/mocks/pkg/protos",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/protos",
        "@com_github_stretchr_testify//mock",
        "@org_golang_google_grpc//:grpc",
    ],
)
