load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = ["root.go"],
    importpath = "royalafg/pkg/auth/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/auth/pkg/auth:auth",
        "@com_github_mitchellh_go_homedir//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    srcs = ["root.go"],
    importpath = "",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/auth/pkg/auth",
        "@com_github_mitchellh_go_homedir//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)
