load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "models",
    srcs = [
        "class.go",
        "lobby.go",
        "token.go",
    ],
    importpath = "github.com/JohnnyS318/RoyalAfgInGo/pkg/poker/models",
    visibility = ["//visibility:public"],
    deps = ["@com_github_form3tech_oss_jwt_go//:jwt-go"],
)
