load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "ticket",
    srcs = [
        "deserialize.go",
        "generate.go",
    ],
    importpath = "github.com/jonsch318/royalafg/pkg/poker/ticket",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/poker/models",
        "@com_github_form3tech_oss_jwt_go//:jwt-go",
    ],
)
